actix client example

--- a/.gitignore
+++ b/.gitignore
@@ -78,6 +78,11 @@ local.properties
 *.orig
 
 ######################
+# VS Code
+######################
+.vscode
+
+######################
 # Maven
 ######################
 /log/**
