async get to files

--- a/src/rust/be/raw/Cargo.toml
+++ b/src/rust/be/raw/Cargo.toml
@@ -13,4 +13,4 @@ env_logger = "0.8"
 actix-rt = "1"
 futures = "0.3.4"
 futures-timer = "3.0.2"
-# tokio = { version = "0.2", features = ["sync"] }
+meilisearch-sdk = "0.6.0"
