--- a/src/rust/be/raw/Cargo.toml
+++ b/src/rust/be/raw/Cargo.toml
@@ -14,3 +14,8 @@ actix-rt = "1"
 futures = "0.3.4"
 futures-timer = "3.0.2"
 meilisearch-sdk = "0.6.0"
+
+hyper = { version = "0.14", features = ["full"] }
+tokio = { version = "1.0", features = ["full"] }
+
+num_cpus = "1.13"
